--- a/nui/ig.core.html
+++ b/nui/ig.core.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width">
     <script src="nui://game/ui/jquery.js" type="text/javascript"></script>
     <!--Shared Frame JS and CSS-->
-    <link href="ore.css" rel="stylesheet" type="text/css" />
-    <script src="ore.js" type="text/javascript"></script>
+    <link href="ig.core.css" rel="stylesheet" type="text/css" />
+    <script src="ig.core.js" type="text/javascript"></script>
     <!--Adding some Useful Libs-->
     <script src="jquery-3.5.1.min.js" type="text/javascript"></script>
     <script src="jquery.mask.min.js" type="text/javascript"></script>
